# 2025-2-CCD-1-DevCode-01

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: BE_deploy.yml  ai_deploy.yml  deploy.yml  discord-notify.yml
AI/: .gitignore  main.py  requirements.txt
AI/ai-lecture-ocr/: README.md  run_lecture_ocr.py
AI/ai_exam_ocr/: .gitignore  README.md  router.py  setup.sh  tasks.py
AI/ai_file_ocr/: app.py  celery_app.py  router.py  tasks.py
AI/ai_lecture_ocr/: router.py  run_lecture_ocr.py
AI/grounding-dino/: README.md  requirements.txt
AI/src/: gdino_utils.py  infer_gdino.py  prompts.yaml  pyproject.toml
AI/src/.cph/: .infer_gdino.py_526f4dd904d5d3aade54a3adf51298d4.prob
AI/src/campusmate_ai/: gdino_utils.py  infer_gdino.py  prompts.yaml
AI/src/campusmate_ai/ocr_light/cli/: infer.py  pipeline.py  postprocess.py  refine_with_ollama.py
AI/src/campusmate_ai/ocr_light/ocr/: engine.py  page_to_text.py  postprocess.py
AI/src/campusmate_ai/processors/chart/: deplot.py
BE/: requirements.txt
BE/app/: models.py
BE/classes/: models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
BE/lecture_docs/: apps.py  auth.py  consumers.py  models.py  ocr.py  serializers.py  urls.py  utils.py  views.py
BE/lectures/: models.py  permissions.py  serializers.py  urls.py  views.py
BE/project/: asgi.py  settings.py  urls.py  vertexai.py
BE/users/: models.py  serializers.py  urls.py  views.py
FE/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
FE/src/: App.tsx  global.d.ts  (+2 more)
(+180 files in other folders)
