[project]
name = "campusmate-ai"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "paddleocr>=2.7",
  "opencv-python-headless>=4.9",
  "pdf2image>=1.16",
  "requests>=2.31",
  "PyYAML>=6.0",
]

[project.scripts]
ocrx = "campusmate_ai.ocr_light.cli.pipeline:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
